# pImplControllerWorker

./: .gitignore  CMakeLists.txt  README.md
src/: MyClass.cpp  MyClass.h  main.cpp
src/Qt/: MyQtClass.cpp  MyQtClass.h
